--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,82 @@
     margin:0 auto;
     position: relative;
 }
+
+header{
+    width:100%;
+    height:100px;
+    background-color:#642D00;
+    position: absolute;
+    top:0px;
+    left:0px;
+}
+
+.caption{
+    width:20%;
+    height:50px;
+    position:absolute;
+    top:30px;
+    left:15%;
+    font-size:34px;
+    color:#FFDBBD;
+    text-align: center;
+}
+
+.header_text{
+    width:20%;
+    height:40px;
+    position:absolute;
+    top:40px;
+    left:45%;
+    font-size: 20px;
+    color:white;
+    text-align: center;
+    font-style: italic;
+}
+.block_buttons{
+    width:20%;
+    height:50px;
+    position:absolute;
+    top:30px;
+    left:65%;
+    font-size:32px;
+    color:#D0BCA8;
+    text-align: center;
+}
+
+.block_buttons a{
+    text-decoration: none;
+    color:#3D251B;
+}
+.block_buttons a:visited{
+    text-decoration: none;
+    color:#3D251B;
+}
+
+
+#btn_sign{
+    padding:10px;
+    margin-right: 20px;
+    border:none;
+    border-radius: 5px;
+    background-color:#FFDBBD;
+    color:#3D251B;
+    font-weight: bold;
+}
+
+#btn_sign:hover{
+    cursor: pointer;
+}
+
+#btn_login{
+    padding:10px;
+    border:none;
+    border-radius: 5px;
+    background-color:#FFDBBD;
+    color:#3D251B;
+    font-weight: bold;
+}
+
+#btn_login:hover{
+    cursor: pointer;
+}
