--- a/css/style.css
+++ b/css/style.css
@@ -123,3 +123,13 @@ header{
     line-height:1.6;
     font-style: italic;
 }
+
+
+
+/* Sign Up Page */
+
+.signup_main{
+    width:100%;
+    height: 800px;
+    background-color:#FFF8EF;
+}
