--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,19 @@ header{
     height: 800px;
     background-color:#FFF8EF;
 }
+
+.header_text1{
+    width:20%;
+    height:40px;
+    position:absolute;
+    top:40px;
+    left:65%;
+    font-size: 20px;
+    color:white;
+    text-align: center;
+    font-style: italic;
+}
+
+.header_text1 a{
+    color:white;
+}
