--- a/css/style.css
+++ b/css/style.css
@@ -154,9 +154,9 @@ header{
     width:50%;
     height:400px;	
     position:absolute;
-    top:200px;
+    top:150px;
     left:25%;
-    background-color:#642D00;
+   
  }
 
  .text{
@@ -166,7 +166,123 @@ header{
 	top:0px;
 	left:5%;
 	padding-top:15px;
-	font-size:22px;
+	font-size:24px;
 	text-align: center;
+	color:black;
+}
+
+#form_sign{
+	width:90%;
+	height:280px;
+	position: absolute;
+	top:70px;
+	left:5%;
+    background-color:#642D00;
+	border-radius:10px;
+    z-index:10;
+}
+
+#btn_sign_in{
+	width:20%;
+	padding:5px;
+	margin-left:15%;
+	margin-top:10px;
+    background-color: #3D251B;
 	color:white;
+	font-weight: bold;
+	border:none;
+	font-size:18px;
+	border-radius: 8px;
+	float:left;
+}
+
+#btn_sign_in:hover{
+	cursor: pointer;
+}
+
+.form_input{
+	width:100%;
+	height:80px;
+}
+
+label{
+	font-size:22px;
+	font-weight: bold;
+	margin-left:20px;
+    color:white;
+
+}
+
+
+input[type="text"]{
+	width:80%;
+	height: 30px;
+	margin-left:20px;
+	border:none;
+	border-radius:8px;
+}
+
+input::placeholder{
+    color:black;
+    padding-left: 10px;
+}
+
+
+input[type="password"]{
+	width:80%;
+	height: 30px;
+	margin-left:20px;
+	border:none;
+	border-radius:8px;
+}
+
+
+.buttons{
+	width:100%;
+	height:80px;
+	position: absolute;
+	top:200px;
+	left:0px;
+}
+
+
+input:focus{
+    outline: none;
+}
+
+#btn_clear{
+	width:20%;
+	padding:5px;
+	margin-left:20%;
+	margin-top:10px;
+	background-color:#FFF8EF;
+	color:black;
+	font-weight: bold;
+	border:none;
+	font-size:18px;
+	border-radius: 8px;
+	float:left;
+}
+
+#btn_clear:hover{
+	cursor: pointer;
+}
+
+
+#btn_sign_in{
+	width:20%;
+	padding:5px;
+	margin-left:15%;
+	margin-top:10px;
+    background-color:#FFF8EF;
+	color:black;
+	font-weight: bold;
+	border:none;
+	font-size:18px;
+	border-radius: 8px;
+	float:left;
+}
+
+#btn_sign_in:hover{
+	cursor: pointer;
 }
