--- a/css/style.css
+++ b/css/style.css
@@ -286,3 +286,20 @@ input:focus{
 #btn_sign_in:hover{
 	cursor: pointer;
 }
+
+
+.for_sign{
+	width:100%;
+	height:40px;
+	position: absolute;
+	top:360px;
+	left:0px;
+	font-size:18px;
+	text-align: center;
+	color:black;
+}
+
+
+.for_sign a{
+	color:darkred;
+}
