--- a/css/style.css
+++ b/css/style.css
@@ -303,3 +303,22 @@ input:focus{
 .for_sign a{
 	color:darkred;
 }
+
+
+.img1{
+    width:50%;
+    height:500px;
+    position: absolute;
+    top:100px;
+    left:2%;
+    z-index:7;
+}
+
+
+.img1>img{
+    width:80%;
+    position: absolute;
+    top:0px;
+    left:0px;
+}
+
