--- a/css/style.css
+++ b/css/style.css
@@ -362,3 +362,20 @@ input:focus{
 #btn_log_in:hover{
 	cursor: pointer;
 }
+
+
+.for_login{
+	width:100%;
+	height:40px;
+	position: absolute;
+	top:360px;
+	left:0px;
+	font-size:18px;
+	text-align: center;
+	color:black;
+}
+
+
+.for_login a{
+	color:darkred;
+}
