--- a/css/style.css
+++ b/css/style.css
@@ -397,3 +397,12 @@ input:focus{
     top:0px;
     left:0px;
 }
+
+
+/* Fodd Page */
+
+.food_main{
+    width:100%;
+    height: 1800px;
+    background-color:#FFF8EF;
+}
