--- a/css/style.css
+++ b/css/style.css
@@ -437,3 +437,13 @@ input:focus{
     font-size: 25px;
     font-style: italic;
 }
+
+.content{
+    width:100%;
+    height: 1600px;
+    position: absolute;
+    top:200px;
+    left:0px;
+    background-color: blue;
+
+}
