--- a/css/style.css
+++ b/css/style.css
@@ -447,3 +447,13 @@ input:focus{
     background-color: blue;
 
 }
+
+
+.cards{
+    width:90%;
+    height:1400px;
+    position: absolute;
+    top:10px;
+    left:5%;
+    background-color: coral;
+}
