--- a/css/style.css
+++ b/css/style.css
@@ -457,3 +457,62 @@ input:focus{
     left:5%;
     background-color: coral;
 }
+
+.row{
+    width:100%;
+    height:600px;
+    background-color: green;
+}
+
+
+.caption1{
+    width:100%;
+    height:50px;
+    text-align: center;
+    font-size:24px;
+}
+
+.meal_card{
+    width:25%;
+    height:400px;
+    background-color: white;
+    float:left;
+    margin:30px 45px;
+    box-shadow: 7px 7px 10px #3D251B;
+}
+
+.meal_image{
+    width:100%;
+    height:52%;
+    background-color: #874646;
+}
+
+.meal_image img{
+    width:100%;
+    height:100%;
+}
+
+.meal_caption{
+    width:100%;
+    height:20px;
+    text-align: center;
+    font-size:20px;
+    margin-top:40px;
+    font-weight: bold;
+}
+
+
+.choose_btn{
+    color:white;
+    font-size:16px;
+    margin-top:35px;
+    border:none;
+    border-radius:10px;
+    padding:5%;
+    background-color: #3D251B;
+    margin-left:35%;
+}
+
+.choose_btn:hover{
+    cursor: pointer;
+}
