--- a/css/style.css
+++ b/css/style.css
@@ -444,8 +444,6 @@ input:focus{
     position: absolute;
     top:200px;
     left:0px;
-    background-color: blue;
-
 }
 
 
@@ -455,13 +453,11 @@ input:focus{
     position: absolute;
     top:10px;
     left:5%;
-    background-color: coral;
 }
 
 .row{
     width:100%;
     height:1000px;
-    background-color: green;
 }
 
 
@@ -470,6 +466,7 @@ input:focus{
     height:50px;
     text-align: center;
     font-size:24px;
+    font-weight: bold;
 }
 
 .meal_card{
