--- a/css/style.css
+++ b/css/style.css
@@ -513,3 +513,14 @@ input:focus{
 .choose_btn:hover{
     cursor: pointer;
 }
+
+
+.diary_main{
+    width:100%;
+    height: 2200px;
+    background-color:#FFF8EF;
+    margin:0 auto;
+    position: relative;
+}
+
+
