--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,21 @@ input:focus{
 }
 
 
+#goto_diary{
+    padding:10px;
+    position: absolute;
+    top:35px;
+    left:70%;
+    border:none;
+    border-radius: 5px;
+    background-color:#FFF8EF;
+    color:black;
+    font-weight: bold;
+}
+
+#goto_diary:hover{
+    cursor: pointer;
+}
 
 .food_text{
     width:50%;
