--- a/css/style.css
+++ b/css/style.css
@@ -529,6 +529,13 @@ input:focus{
     cursor: pointer;
 }
 
+.meal_calories{
+    width:100%;
+    height:20px;
+    text-align: center; 
+    margin-top:20px;
+}
+
 
 .diary_main{
     width:100%;
