--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,8 @@ input:focus{
 }
 
 
+/* Food diary page */
+
 .diary_main{
     width:100%;
     height: 2500px;
@@ -546,3 +548,96 @@ input:focus{
 }
 
 
+.content1{
+    width:100%;
+    height:1000px;
+    position: absolute;
+    top:100px;
+    left:0px;
+}
+
+.block_food{
+    width:55%;
+    height:500px;
+    position: absolute;
+    top:20px;
+    left:10%;
+}
+
+.caption2{
+    width:100%;
+    height:50px;
+    font-size:29px;
+    font-style:italic;
+    font-weight: bold;
+    color:black;
+    position: absolute;
+    top:10px;
+    text-align: center;
+}
+
+
+/* Meals list */
+.rectangle{
+    width:80%;
+    height: 370px;
+    background-color:#642D00;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    position: absolute;
+    top:80px;
+    left:10%;
+}
+
+.food_caption{
+    width:50%;
+    height:50px;
+    text-align: center;
+    font-size:20px;
+    color:white;
+    float:left;
+    margin-top:10px;
+}
+
+.food_calories{
+    width:50%;
+    height:50px;
+    text-align: center;
+    font-size:20px;
+    color:white;
+    float:left;
+    margin-top:10px;
+}
+
+
+.line{
+    width:90%;
+    height:1px;
+    position: absolute;
+    top:50px;
+    left:5%;
+    background-color: white;
+}
+
+.new_meal{
+    width:100%;
+    height:30px;
+    color:white;
+    margin-top:5px;
+    margin-bottom:5px;
+}
+
+
+.new_food_caption{
+    width:50%;
+    float:left;
+    text-align: center;
+    padding-top:5px;
+}
+
+.new_food_calories{
+    width:50%;
+    float:left;
+    text-align: center;
+    padding-top:5px;
+}
