--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,7 @@ input:focus{
 }
 
 .food_caption{
-    width:50%;
+    width:33%;
     height:50px;
     text-align: center;
     font-size:20px;
@@ -600,7 +600,7 @@ input:focus{
 }
 
 .food_calories{
-    width:50%;
+    width:33%;
     height:50px;
     text-align: center;
     font-size:20px;
@@ -608,6 +608,17 @@ input:focus{
     float:left;
     margin-top:10px;
 }
+
+.food_date{
+    width:33%;
+    height:50px;
+    text-align: center;
+    font-size:20px;
+    color:white;
+    float:left;
+    margin-top:10px;
+}
+
 
 
 .line{
@@ -619,6 +630,14 @@ input:focus{
     background-color: white;
 }
 
+
+.list_food{
+    width:70%;
+    position:absolute;
+    top:145px;
+    left:15%;
+}
+
 .new_meal{
     width:100%;
     height:30px;
@@ -628,16 +647,41 @@ input:focus{
 }
 
 
-.new_food_caption{
-    width:50%;
+.new_meal_caption{
+    width:33%;
+    float:left;
+    text-align: left;
+    padding-top:5px;
+}
+
+.new_meal_calories{
+    width:33%;
     float:left;
     text-align: center;
     padding-top:5px;
 }
 
-.new_food_calories{
-    width:50%;
+.new_meal_date{
+    width:33%;
     float:left;
-    text-align: center;
+    text-align: right;
     padding-top:5px;
+}
+
+
+#show_meals{
+    padding:10px;
+    position: absolute;
+    top:10px;
+    left:65%;
+    border:none;
+    border-radius: 5px;
+    background-color:#3D251B;
+    color:#D0BCA8;
+    font-weight: bold;
+}
+
+
+#show_meals:hover{
+    cursor: pointer;
 }
