--- a/css/style.css
+++ b/css/style.css
@@ -685,3 +685,64 @@ input:focus{
 #show_meals:hover{
     cursor: pointer;
 }
+
+
+
+/* Block calories */
+
+.block_calories{
+    width:35%;
+    height:500px;
+    position: absolute;
+    top:20px;
+    left:60%;
+}
+
+.caption3{
+    width:100%;
+    height:50px;
+    font-size:29px;
+    font-style:italic;
+    font-weight: bold;
+    color:black;
+    position: absolute;
+    top:10px;
+    text-align: center;
+}
+
+.result_calories{
+    width:50%;
+    height:50px;
+    text-align: center;
+    font-size:20px;
+    float:left;
+    margin-top:10px;
+}
+
+.result_date{
+    width:50%;
+    height:50px;
+    text-align: center;
+    font-size:20px;
+    float:left;
+    margin-top:10px;
+}
+
+
+.line{
+    width:90%;
+    height:1px;
+    position: absolute;
+    top:50px;
+    left:5%;
+    background-color: black;
+}
+
+
+.result{
+    width:80%;
+    height: 370px;
+    position: absolute;
+    top:80px;
+    left:10%;
+}
