--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,7 @@ input:focus{
     position: absolute;
     top:80px;
     left:10%;
+    z-index:5;
 }
 
 .food_caption{
@@ -745,4 +746,16 @@ input:focus{
     position: absolute;
     top:80px;
     left:10%;
+}
+
+.img3{
+    width:20%;
+    position: absolute;
+    top:10px;
+    left:0%;
+    z-index:3;
+}
+
+.img3 img{
+    width:100%;
 }
