--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,11 @@ input:focus{
     cursor: pointer;
 }
 
+
+#goto_diary a{
+    color:black;
+    text-decoration: none;
+}
 .food_text{
     width:50%;
     height: 60px;
