--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,29 @@ input:focus{
     position: relative;
 }
 
+#goto_food{
+    padding:10px;
+    position: absolute;
+    top:35px;
+    left:70%;
+    border:none;
+    border-radius: 5px;
+    background-color:#FFF8EF;
+    color:black;
+    font-weight: bold;
+}
+
+#goto_food:hover{
+    cursor: pointer;
+}
+
+
+#goto_food a{
+    color:black;
+    text-decoration: none;
+}
+
+
 
 .content1{
     width:100%;
