--- a/css/style.css
+++ b/css/style.css
@@ -609,7 +609,7 @@ input:focus{
 /* Meals list */
 .rectangle{
     width:80%;
-    height: 340px;
+    height:70px;
     background-color:#642D00;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -662,11 +662,12 @@ input:focus{
 
 
 .list_food{
-    width:70%;
+    width:80%;
     position:absolute;
     top:145px;
-    left:15%;
+    left:10%;
     z-index:7;
+    background-color:#642D00;
 }
 
 .new_meal{
@@ -681,7 +682,7 @@ input:focus{
 .new_meal_caption{
     width:33%;
     float:left;
-    text-align: left;
+    text-align: center;
     padding-top:5px;
 }
 
@@ -695,7 +696,7 @@ input:focus{
 .new_meal_date{
     width:33%;
     float:left;
-    text-align: right;
+    text-align:center;
     padding-top:5px;
 }
 
