--- a/css/style.css
+++ b/css/style.css
@@ -819,3 +819,27 @@ input:focus{
     z-index:7;
     background-color:#642D00;
 }
+
+
+.block_result{
+    width:100%;
+    height:30px;
+    color:black;
+    margin-top:5px;
+    margin-bottom:5px;
+}
+
+
+.block_result_calories{
+    width:50%;
+    float:left;
+    text-align: center;
+    padding-top:5px;
+}
+
+.block_result_date{
+    width:50%;
+    float:left;
+    text-align: center;
+    padding-top:5px;
+}
