--- a/css/style.css
+++ b/css/style.css
@@ -840,3 +840,22 @@ input:focus{
     text-align: center;
     padding-top:5px;
 }
+
+
+
+#start_week{
+    position:absolute;
+    top:330px;
+    left:33%;
+    border:none;
+    border-radius: 5px;
+    background-color: #642D00;
+    color:white;
+    font-weight: bold;
+    padding:10px;
+}
+
+
+#start_week:hover{
+    cursor: pointer;
+}
